# pytest_recorder

./: .gitignore  .pylintrc  AGENTS.md  README.md  pyproject.toml
pytest_recorder/: plugin.py  record_curl.py  record_ftp.py  record_http.py  record_time.py  record_type.py  record_verify_object.py  record_verify_screen.py  recorder.py
tests/: test_saving_ftp.py  test_saving_objects.py  test_saving_requests.py  test_saving_screen.py  test_saving_time.py
tests/pytest_recorder/: test_recorder.py  test_recorder_verify_object.py
tests/record/curl/test_saving_requests/: test_saving_curl_cffi_async_requests_curl.yaml  test_saving_curl_cffi_module_requests_curl.yaml  test_saving_curl_cffi_session_requests_curl.yaml  test_saving_curl_requests_curl.yaml  test_saving_mixed_curl_requests_curl.yaml  test_saving_pycurl_requests_curl.yaml
tests/record/ftp/test_saving_ftp/: test_before_record_response_ftp.yaml  test_download_via_ftplib_ftp.yaml  test_download_via_urlopen_ftp.yaml  test_filter_arguments_ftp.yaml  test_upload_via_ftplib_ftp.yaml
tests/record/http/test_saving_requests/: test_saving_requests.yaml  test_saving_requests_urllib3_v2.yaml
tests/record/object_hash/test_saving_objects/: test_saving_object.json
tests/record/screen/test_saving_screen/: test_recording_screen.json
tests/record/time/test_saving_time/: test_save_current_time.json  test_save_delorean_time.json
