[tool.poetry]
authors = [
    "Chavithra Parana <chavithra@gmail.com>",
    "Theodore Aptekarev <piiq@tinag.ru>",
    "Juan Alfonso <me@tehcoderer.com>",
    "Darren Lee <deeleeramone@gmail.com>",
    "OpenBB <hello@openbb.co>",
]
classifiers = ["Framework :: Pytest"]
description = "Pytest plugin, meant to facilitate unit tests writing for tools consumming Web APIs."
license = "MIT"
name = "pytest-recorder"
packages = [{ include = "pytest_recorder" }]
readme = "README.md"
version = "0.4.8"

[tool.poetry.dependencies]
python = ">=3.9.21,<3.13"
cryptography = "^44.0.2"
vcrpy = [
    { version = "^6.0.2", markers = "python_version < '3.10'" },
    { version = "^7.0.0", markers = "python_version >= '3.10'" },
]
urllib3 = [
    { version = "^1.26.20", markers = "python_version < '3.10'" },
    { version = ">=1.26.20", markers = "python_version >= '3.10'" }
]
time-machine = "^2.16.0"
idna = "^3.7"
curl-adapter = "^1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^25.1.0"
pylint = "^3.3.1"
mypy = "^1.12.0"
pytest-mock = "^3.12.0"
poetry = ">=1.8.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."pytest11"]
pytest_recorder_plugin = "pytest_recorder.plugin"
pytest_recorder_record_http = "pytest_recorder.record_http"
pytest_recorder_record_curl = "pytest_recorder.record_curl"
pytest_recorder_record_time = "pytest_recorder.record_time"
pytest_recorder_record_verify_object = "pytest_recorder.record_verify_object"
pytest_recorder_record_verify_screen = "pytest_recorder.record_verify_screen"
